Исправления по ревью